--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running Club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
-    
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
 
 <body>
-    <h1>Hello World!</h1>
-    
+    <header>Header content</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running location, distance and time
+    </section>
+    <footer>
+        social links here
+    </footer>
 </body>
 
 </html>
