--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
         <nav>
             <ul id="menu">
@@ -26,7 +26,7 @@
                     <a href="#">Gallery</a>
                 </li>
                 <li>
-                    <a href="index.html" class="active""">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
